# chess

./: .gitignore  Cargo.toml  README.md  build.rs  run_match.sh
.cargo/: config.toml
src/: attacks.rs  board.rs  eval.rs  fen.rs  lib.rs  magic_finder.rs  magics.rs  main.rs  nnue.rs  opening_book.rs  pawn_hash.rs  perft.rs  polyglot_zobrist.rs  pst.rs  score.rs  search.rs  see.rs  time.rs  tt.rs  types.rs  uci.rs  uci_io.rs  zobrist.rs
tools/: engines.json  perft_test.py  play.py  play_stockfish.py  requirements.txt  texel_tuner.py
