[package]
name = "chess"
version = "6.0.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand = "0.8"
num_cpus = "1.16.0"
byteorder = "1.4"
once_cell = "*"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1
panic = "abort"
strip = true

[target.x86_64-unknown-linux-gnu.release]
rustflags = ["-C", "relocation-model=static"]
